--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.8.0",
-    "sequelize": "^6.32.1"
+    "react-slick": "^0.29.0",
+    "sequelize": "^6.32.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
